Add flash to express.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "async": "*",
     "socket.io": "*",
     "mongoose": "*",
-    "cors": "*"
+    "cors": "*",
+    "connect-flash": "*"
   },
   "engines": {
     "node": "0.10.x",
